# XCORE

./: .gitignore  .versionrc.json  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
design/ascii/: xcore_ascii-art-1.txt  xcore_ascii-art-2.txt  xcore_ascii-art-3.txt
design/css/: main.min.css  main.min.css.map
design/ico/: site.webmanifest
design/scss/: _base.scss  _dashboard.scss  _footer.scss  _layout.scss  _markdown_viewer.scss  _mixin.scss  _modal.scss  _module_details.scss  _module_result_display.scss  _navbar.scss  _sidelist.scss  _variables.scss  main.scss
design/stylesheets/css/: dashboard.css  footer.css  modal.css
dev/: qrc_converter.py  ui_converter.py
dev/frontend/cli/: welcome_banner.py
dev/frontend/web/: index.html  package.json  vite.config.js
dev/frontend/web/public/: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  DOCUMENTATION_DE.md  README.md  README_EN.md
dev/frontend/web/src/: App.jsx  index.css  main.jsx
dev/frontend/web/src/Layout/: Footer.jsx  Layout.jsx
dev/frontend/web/src/components/: MarkdownViewer.jsx
dev/frontend/web/src/components/Navbar/: Logo.jsx  Navbar.jsx  ThemeToggleButton.jsx
dev/frontend/web/src/components/Sidebar/: Sidelist.jsx
dev/frontend/web/src/components/XCOREmodules/: CategorySelector.jsx  ModuleDetails.jsx  ModuleSelector.jsx  ResultDisplay.jsx  XcoreModules.jsx
dev/frontend/web/src/context/: AuthContext.jsx  ThemeContext.jsx
dev/frontend/web/src/i18n/: index.js
dev/frontend/web/src/i18n/de/: base.json  error.json  module.json  sidelist.json  signin.json  signup.json
dev/frontend/web/src/i18n/en/: base.json  module.json  sidelist.json  signin.json  signup.json
dev/frontend/web/src/pages/: Changelog.jsx  Dashboard.jsx  Documentation.jsx  SignIn.jsx  SignUp.jsx  Support.jsx
dev/frontend/web/src/styles/: base.css  main.min.css  module_details.css  module_result_display.css  navbar.css  sidelist.css
dev/tools/: module_creator.py  module_editor.py  module_templates.py
docs/: CONTRIBUTING_EN.md  DOCUMENTATION_DE.md  DOCUMENTATION_EN.md  README_EN.md
scripts/: build_and_deploy_frontend.py  clean_up.py  clean_up_runtime_dirs.py  cmd_wrapper.py  compile_scss.py  copy_docs.py  update-setup-version.js
tests/: test_all_real_modules.py  test_database_manager.py  test_flask_web_routes.py  test_i18n_manager.py  test_modul_loader_integration.py  test_module_loader.py
xcore_framework/: __init__.py  __main__.py  main.py
xcore_framework/config/: banner.py  db.py  env.py  formatting.py  rte.py
xcore_framework/config/i18n/: __init__.py  i18n_manager.py
xcore_framework/config/i18n/de/: config.json  creative_ascii_qrcode.json  database.json  exploitation_ftp_bruteforce.json  goodbye.json  gui.json  header.json  help.json  helper_gilbert_reminder.json  info.json  language.json  list.json  main.json  module.json  notice.json  options.json  prompt.json  scanner_nmap.json  scanner_portscan.json  setpoint_cli.json  system.json  system_bash_history_stats.json  template_modul.json  unknown.json  welcome.json
xcore_framework/config/i18n/en/: config.json  creative_ascii_qrcode.json  database.json  error.json  exploitation_ftp_bruteforce.json  goodbye.json  gui.json  header.json  help.json  helper_gilbert_reminder.json  info.json  language.json  list.json  main.json  module.json  notice.json  options.json  scanner_nmap.json  scanner_portscan.json  setpoint_cli.json  system.json  system_bash_history_stats.json  template_modul.json  unknown.json  welcome.json
xcore_framework/core/: commander.py  database_manager.py  initializer.py  logger.py  module_base.py  module_communicator.py  module_globals.py  module_loader.py  runtime_executor.py  runtime_manager.py  xmod_manager.py
xcore_framework/docs/: CHANGELOG.md  CODE_OF_CONDUCT_EN.md  DOCUMENTATION_EN.md  README.md  README_EN.md
xcore_framework/editor/: module_editor.py  module_templates.py
xcore_framework/gui/: gui.py  widget_factory.py
xcore_framework/modules/: file_renamer.xmod  mods_loader.py
xcore_framework/modules/creative/: ascii_qrcode.py  ascii_qrcode.xmod
xcore_framework/modules/exploitation/: placeholder.xmod
xcore_framework/modules/scanner/: nmap.py
xcore_framework/modules/system/: bash_history_stats.py
xcore_framework/modules/template/: modul.py  sample_module.xmod
xcore_framework/runtime/feedback/: FeedbackSystem.ps1  JavaFeedbackSystem.java  bash_feedback.sh  node_feedback.js
xcore_framework/setpoint/: setpoint_cli.py  setpoint_gui.py  setpoint_logic.py  setpoint_web.py
xcore_framework/tools/: module_creator.py  module_editor.py
xcore_framework/web/: config.py  run.py
xcore_framework/web/app/: __init__.py  auth.py  main.py  models.py  modules.py
xcore_framework/web/app/static/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
xcore_framework/web/app/static/assets/: @ungap--gfxRhYI.js  Dashboard-B2UsSI02.js  Dashboard-BRIzo2Zq.js  Dashboard-BemGgZZJ.js  Dashboard-Bx3F1zwi.js  Dashboard-CGZm9SP9.js  Dashboard-d7e1qOwc.js  Dashboard-mFCJgicK.js  MarkdownViewer-D3ttcY-T.js  SignUp-B23E65OL.js  SignUp-BQzDCI1l.js  SignUp-CGnWD44h.js  comma-separated-tokens-Dw-VBL9A.js  entities-BglH30t1.js  estree-util-is-identifier-name-BgBfM8ME.js  extend-DuIhtcE1.js  hast-util-from-parse5-HzwIrFyP.js  hast-util-raw-DyqM5I8_.js  hast-util-to-jsx-runtime-DLvgZj2o.js  hast-util-to-parse5-C24-MYBT.js  hastscript-B6S-Ixud.js  i18next-Bhc83OLH.js  i18next-Bq7Um66T.js  i18next-vaxH1JL1.js  index-B6HGGckR.css  index-B8PQ26A7.js  index-BdUbbZgf.js  index-BovUbLlr.js  index-BqY9kCZX.js  index-CEtnSwVb.js  index-CKk_WuA1.css  index-CNiin6CF.css  index-CdUGncwp.js  index-DWml3QXA.css  index-DnwSRcP_.js  index-IPeVCcFh.js  mdast-util-from-markdown-CgCUhJTR.js  mdast-util-to-hast-Dl9GE0WV.js  micromark-DhRKOnvZ.js  micromark-core-commonmark-CDnWrFBr.js  (+32 more)
xcore_framework/web/app/templates/: index.html
